# paxos-with-a-vengeance

./: .gitignore  README.md  maker.rb  paxos-with-a-vengeance.cabal
src/: Action.hs.erb  Bench.hs  Client.hs  Model.hs.erb  Server.hs  Tests.hs  Tests.hs.erb
src/Action/: Example.hs
src/Control/Monad/: Act.hs
src/Data/: ModelTree.hs  NodeState.hs
src/Data/Protocol/: Command.hs  Update.hs
src/Model/: Example.hs
src/Network/: CommandClient.hs
src/Network/Socket/ByteString/: RecvAll.hs
src/Tests/: ActionTests.hs  Model.hs  ModelTests.hs
src/Tests/Data/: ModelTreeTests.hs
