name:                paxos-with-a-vengeance
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
--license-file:        LICENSE
author:              Carl Mackey
maintainer:          carljmackey@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable paxos-with-a-vengeance-tests
  hs-source-dirs:      src
  main-is:             Tests.hs
  ghc-options:         -Wall -fno-warn-missing-signatures -fwarn-tabs -fhpc
  build-depends:       array, base ==4.5.*, bytestring, cereal >=0.3.5, containers, derive >=2.5.9, ghc-prim, HUnit, QuickCheck >=2.4, regex-posix, test-framework, test-framework-hunit, test-framework-th, test-framework-quickcheck2, text, utf8-string >=0.3
--  build-depends:       array, base ==4.5.*, bytestring, containers, HUnit, mtl, parsec >=3.1.3, regex-posix, split, test-framework, test-framework-hunit, test-framework-th, test-framework-quickcheck2, text, transformers

--Library
--  hs-source-dirs:      src
--  exposed-modules:     Dom.Templ Dom.TemplTypes Dom.TemplFunctions
--  ghc-options:         -O2 -Wall -fwarn-tabs -threaded
--  build-depends:       base ==4.5.*, bytestring, cmdargs, haste-compiler, mtl, parsec, regex-posix, text, transformers
