name:                paxos-with-a-vengeance
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
--license-file:        LICENSE
author:              Carl Mackey
maintainer:          carljmackey@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

--executable paxos-with-a-vengeance-client
--  hs-source-dirs:      src
--  main-is:             Client.hs
--  ghc-options:         -Wall -fno-warn-missing-signatures -fwarn-tabs -O2
--  build-depends:       array, base ==4.5.*, bytestring, cereal >=0.3.5, network, containers, derive >=2.5.9, ghc-prim, HUnit, mtl >=2.1.1, QuickCheck >=2.4, regex-posix, test-framework, test-framework-hunit, test-framework-th, test-framework-quickcheck2, text, utf8-string >=0.3

--executable paxos-with-a-vengeance-server
--  hs-source-dirs:      src
--  main-is:             Server.hs
--  ghc-options:         -Wall -fno-warn-missing-signatures -fwarn-tabs -O2
--  build-depends:       array, base ==4.5.*, bytestring, cereal >=0.3.5, network, containers, derive >=2.5.9, ghc-prim, HUnit, mtl >=2.1.1, QuickCheck >=2.4, regex-posix, test-framework, test-framework-hunit, test-framework-th, test-framework-quickcheck2, text, utf8-string >=0.3

executable paxos-with-a-vengeance-tests
  hs-source-dirs:      src
  main-is:             Tests.hs
  ghc-options:         -Wall -fno-warn-missing-signatures -fwarn-tabs -fhpc
  build-depends:       array, base ==4.5.*, bytestring, cereal >=0.3.5, network, containers, derive >=2.5.9, ghc-prim, HUnit, mtl >=2.1.1, QuickCheck >=2.4, regex-posix, test-framework, test-framework-hunit, test-framework-th, test-framework-quickcheck2, text, utf8-string >=0.3

--executable paxos-with-a-vengeance-bench
--  hs-source-dirs:      src
--  main-is:             Bench.hs
--  ghc-options:         -Wall -fno-warn-missing-signatures -fwarn-tabs -O2
--  build-depends:       array, base ==4.5.*, bytestring, cereal >=0.3.5, containers, derive >=2.5.9, ghc-prim, HUnit, mtl >=2.1.1, QuickCheck >=2.4, regex-posix, test-framework, test-framework-hunit, test-framework-th, test-framework-quickcheck2, text, utf8-string >=0.3, criterion
--

